test_suite/tests/ui/default-attribute/incorrect_type_tuple.stderr
error[E0308]: mismatched types
 --> tests/ui/default-attribute/incorrect_type_tuple.rs:6:19
  |
6 | #[serde(default = "main")]
  |                   ^^^^^^ expected `Tuple`, found `()`

error[E0308]: `match` arms have incompatible types
 --> tests/ui/default-attribute/incorrect_type_tuple.rs:7:36
  |
5 | #[derive(Deserialize)]
  |          -----------
  |          |
  |          this is found to be of type `i8`
  |          `match` arms have incompatible types
6 | #[serde(default = "main")]
7 | struct Tuple(u8, #[serde(default = "main")] i8);
  |                                    ^^^^^^ expected `i8`, found `()`

error[E0308]: mismatched types
 --> tests/ui/default-attribute/incorrect_type_tuple.rs:6:19
  |
6 | #[serde(default = "main")]
  |                   ^^^^^^ expected `Tuple`, found `()`
7 | struct Tuple(u8, #[serde(default = "main")] i8);
  |        ----- expected due to this

error[E0308]: mismatched types
 --> tests/ui/default-attribute/incorrect_type_tuple.rs:7:36
  |
5 | #[derive(Deserialize)]
  |          ----------- expected due to the type of this binding
6 | #[serde(default = "main")]
7 | struct Tuple(u8, #[serde(default = "main")] i8);
  |                                    ^^^^^^ expected `i8`, found `()`
